--- a/resources.qrc
+++ b/resources.qrc
@@ -1,8 +1,4 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-  <qresource prefix="/">
-    <file>Qml/Main.qml</file>
-    <file>Qml/Footer.qml</file>
-  </qresource>
-  <qresource></qresource>
+  <qresource prefix="/"></qresource>
 </RCC>
