--- a/resources.qrc
+++ b/resources.qrc
@@ -1,4 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-  <qresource prefix="/"></qresource>
+  <qresource prefix="/">
+    <file>images/menu.svg</file>
+  </qresource>
 </RCC>
